# qbit

./: .gitignore  .mcp.json  .release-please-manifest.json  AGENTS.md  AGENT_CANCELLATION_TDD_PLAN.md  CHANGELOG.md  CLAUDE.md  CURRENT-TASK.md  DEBUG_BADGE_PLAN.md  DEBUG_BADGE_WORK_TRACKER.md  HANDOFF_SUMMARY.md  PERFORMANCE_IMPLEMENTATION_PLAN.md  PR_DESCRIPTION.md  README.md  REFACTORING_SUMMARY.md  TERMINAL_STREAMING_PLAN.md  biome.json  execution-plan-tdd.md  git-commit-sidebar-plan.md  index.html  justfile  package-lock.json  package.json  perf-review-architecture.md  perf-review-bundle.md  perf-review-data-fetching.md  perf-review-effects.md  perf-review-events.md  perf-review-lists.md  perf-review-memory.md  perf-review-rendering.md  perf-review-state-management.md  perf-review-terminal.md  perf-summary.md  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  provider-model-config-analysis.md  release-please-config.json  tab-completion-plan.md  (+6 more)
backend/: .gitignore  CHANGELOG.md  Cargo.toml  tauri.conf.json
backend/.cargo/: config.toml
backend/crates/qbit/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
backend/crates/qbit-ai/: Cargo.toml
backend/crates/qbit-ai/src/: agent_bridge.rs  agentic_loop.rs  bridge_context.rs  bridge_hitl.rs  bridge_policy.rs  bridge_session.rs  codex_prompt.rs  eval_support.rs  event_coordinator.rs  lib.rs  llm_client.rs  memory_file.rs  prompt_registry.rs  sub_agent.rs  sub_agent_executor.rs  summarizer.rs  system_prompt.rs  test_utils.rs  tool_definitions.rs  tool_execution.rs  tool_executors.rs  tool_policy.rs  tool_provider_impl.rs  transcript.rs  web_fetch.rs
backend/crates/qbit-api-logger/: Cargo.toml
backend/crates/qbit-api-logger/src/: lib.rs
backend/crates/qbit-artifacts/: Cargo.toml
backend/crates/qbit-artifacts/src/: lib.rs
backend/crates/qbit-ast-grep/: Cargo.toml
backend/crates/qbit-ast-grep/src/: language.rs  lib.rs  result.rs  tool.rs
backend/crates/qbit-benchmarks/: Cargo.toml
backend/crates/qbit-benchmarks/src/: lib.rs
backend/crates/qbit-cli-output/: Cargo.toml
backend/crates/qbit-cli-output/src/: lib.rs
backend/crates/qbit-context/: Cargo.toml
backend/crates/qbit-context/src/: context_manager.rs  context_pruner.rs  lib.rs  token_budget.rs  token_trunc.rs
backend/crates/qbit-core/: Cargo.toml
backend/crates/qbit-core/src/: api_request_stats.rs  events.rs  hitl.rs  lib.rs  message.rs  plan.rs  prompt.rs  runtime.rs  tool.rs  tool_name.rs  utils.rs
backend/crates/qbit-directory-ops/: Cargo.toml
backend/crates/qbit-directory-ops/src/: lib.rs
backend/crates/qbit-evals/: Cargo.toml
backend/crates/qbit-evals/src/: color.rs  config.rs  executor.rs  lib.rs  outcome.rs  runner.rs
backend/crates/qbit-file-ops/: Cargo.toml
backend/crates/qbit-file-ops/src/: lib.rs
backend/crates/qbit-history/: Cargo.toml
backend/crates/qbit-history/src/: entry.rs  error.rs  lib.rs  manager.rs  storage.rs
backend/crates/qbit-hitl/: Cargo.toml
backend/crates/qbit-hitl/src/: approval_recorder.rs  lib.rs
backend/crates/qbit-indexer/: Cargo.toml
backend/crates/qbit-indexer/src/: lib.rs  state.rs
backend/crates/qbit-json-repair/: Cargo.toml
backend/crates/qbit-json-repair/src/: lib.rs
backend/crates/qbit-llm-providers/: Cargo.toml
backend/crates/qbit-llm-providers/src/: http_client.rs  lib.rs  model_capabilities.rs  openai_config.rs  provider_trait.rs  reasoning_models.rs
backend/crates/qbit-loop-detection/: Cargo.toml
backend/crates/qbit-mcp/: Cargo.toml
backend/crates/qbit-mcp/src/: client.rs  config.rs  lib.rs  loader.rs  manager.rs  sse_transport.rs  tools.rs
backend/crates/qbit-models/: Cargo.toml
backend/crates/qbit-models/src/: capabilities.rs  lib.rs  providers.rs  registry.rs
backend/crates/qbit-planner/: Cargo.toml
backend/crates/qbit-planner/src/: lib.rs
backend/crates/qbit-pty/: Cargo.toml
backend/crates/qbit-pty/src/: error.rs  lib.rs  manager.rs  parser.rs  shell.rs
backend/crates/qbit-runtime/: Cargo.toml
backend/crates/qbit-runtime/src/: lib.rs  tauri.rs
backend/crates/qbit-session/: Cargo.toml
backend/crates/qbit-session/src/: lib.rs
backend/crates/qbit-settings/: Cargo.toml
backend/crates/qbit-settings/src/: lib.rs  loader.rs  project.rs  schema.rs  (+1 more)
backend/crates/qbit-shell-exec/: Cargo.toml
backend/crates/qbit-sidecar/: Cargo.toml
backend/crates/qbit-skills/: Cargo.toml
backend/crates/qbit-sub-agents/: Cargo.toml
backend/crates/qbit-swebench/: Cargo.toml
backend/crates/qbit-synthesis/: Cargo.toml
backend/crates/qbit-tool-policy/: Cargo.toml
backend/crates/qbit-tools/: Cargo.toml
backend/crates/qbit-tracing/: Cargo.toml
backend/crates/qbit-udiff/: Cargo.toml
backend/crates/qbit-web/: Cargo.toml
backend/crates/qbit-workflow/: Cargo.toml
backend/crates/rig-anthropic-vertex/: Cargo.toml
backend/crates/rig-gemini-vertex/: Cargo.toml
backend/crates/rig-openai-responses/: Cargo.toml  PLAN.md
backend/crates/rig-zai/: Cargo.toml
backend/crates/rig-zai-anthropic/: Cargo.toml
backend/crates/rig-zai-sdk/: Cargo.toml
backend/docs/: openai-responses-api-reasoning-fix.md  tavily-tools-migration-plan.md
backend/src/: error.rs  lib.rs
backend/src/ai/: agent_bridge.rs  agent_mode.rs  agentic_loop.rs  bridge_session.rs  events.rs  llm_client.rs  session.rs  sub_agent.rs  sub_agent_executor.rs  system_prompt.rs  token_budget.rs  token_trunc.rs  tool_definitions.rs  tool_policy.rs
backend/src/cli/: args.rs  bootstrap.rs  eval.rs  mod.rs  output.rs  runner.rs
backend/src/commands/: mod.rs  shell.rs
backend/src/evals/: config.rs  executor.rs  mod.rs  runner.rs
backend/src/indexer/: commands.rs  mod.rs  paths.rs  state.rs
backend/src/pty/: manager.rs  mod.rs  parser.rs  shell.rs
backend/src/runtime/: cli.rs  mod.rs
backend/src/session/: archive.rs  mod.rs
backend/src/settings/: loader.rs  schema.rs  template.toml
backend/src/sidecar/: artifacts.rs  capture.rs  mod.rs  state.rs  synthesis.rs
backend/src/tools/: file_ops.rs  mod.rs  registry.rs  traits.rs
backend/tests/: compat_layer.rs
(+902 files in other folders)
