[workspace]
members = [
    "crates/qbit",
    "crates/qbit-core",
    "crates/qbit-cli-output",
    "crates/qbit-directory-ops",
    "crates/qbit-evals",
    "crates/qbit-file-ops",
    "crates/qbit-settings",
    "crates/qbit-runtime",
    "crates/qbit-tools",
    "crates/qbit-udiff",
    "crates/qbit-planner",
    "crates/qbit-pty",
    "crates/qbit-indexer",
    "crates/qbit-sidecar",
    "crates/qbit-artifacts",
    "crates/qbit-synthesis",
    "crates/qbit-tool-policy",
    "crates/qbit-session",
    "crates/qbit-context",
    "crates/qbit-workflow",
    "crates/qbit-hitl",
    "crates/qbit-loop-detection",
    "crates/qbit-llm-providers",
    "crates/qbit-ai",
    "crates/qbit-sub-agents",
    "crates/qbit-web",
    "crates/qbit-shell-exec",
    "crates/rig-anthropic-vertex",
    "crates/rig-zai",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["you"]
license = "MIT"
repository = "https://github.com/yourusername/qbit"

[workspace.dependencies]
# Internal crates
qbit-core = { path = "crates/qbit-core" }
qbit-cli-output = { path = "crates/qbit-cli-output" }
qbit-directory-ops = { path = "crates/qbit-directory-ops" }
qbit-evals = { path = "crates/qbit-evals" }
qbit-settings = { path = "crates/qbit-settings" }
qbit-runtime = { path = "crates/qbit-runtime" }
qbit-tools = { path = "crates/qbit-tools" }
qbit-udiff = { path = "crates/qbit-udiff" }
qbit-planner = { path = "crates/qbit-planner" }
qbit-pty = { path = "crates/qbit-pty" }
qbit-indexer = { path = "crates/qbit-indexer" }
qbit-sidecar = { path = "crates/qbit-sidecar" }
qbit-artifacts = { path = "crates/qbit-artifacts" }
qbit-tool-policy = { path = "crates/qbit-tool-policy" }
qbit-session = { path = "crates/qbit-session" }
qbit-context = { path = "crates/qbit-context" }
qbit-workflow = { path = "crates/qbit-workflow" }
qbit-ai = { path = "crates/qbit-ai" }
qbit-sub-agents = { path = "crates/qbit-sub-agents" }
qbit-hitl = { path = "crates/qbit-hitl" }
qbit-loop-detection = { path = "crates/qbit-loop-detection" }
qbit-llm-providers = { path = "crates/qbit-llm-providers" }
qbit-web = { path = "crates/qbit-web" }
qbit-file-ops = { path = "crates/qbit-file-ops" }
qbit-shell-exec = { path = "crates/qbit-shell-exec" }
qbit-synthesis = { path = "crates/qbit-synthesis" }

# Tauri (optional - only for GUI app)
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-dialog = { version = "2" }

# CLI dependencies (optional - only for CLI binary)
clap = { version = "4", features = ["derive", "env"] }
atty = { version = "0.2" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Terminal
portable-pty = "0.8"
vte = "0.13"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
similar = "2"

# AI / LLM integration via vtcode
vtcode-core = "0.47"
vtcode-indexer = "0.47"
futures = "0.3"
dotenvy = "0.15"

# Web search
tavily = "0.2"

# Web fetching and content extraction
reqwest = { version = "0.12", features = ["json"] }
readability = "0.2"
url = "2.5"

# Rig core for LLM orchestration
rig-core = { version = "^0.23.1", features = [] }

# Evals framework (optional - only for evals feature)
tempfile = { version = "3" }
indicatif = { version = "0.17" }

# Google Cloud authentication (for sidecar Vertex AI synthesis)
gcp_auth = "0.12"

# Graph-based workflow execution for multi-agent systems
graph-flow = "0.4"
async-trait = "0.1"

# File walking with gitignore support
ignore = "0.4"

# Pattern matching and regex
glob = "0.3"
regex = "1"

# TOML settings file support
toml = "0.8"

# TLS crypto provider (required for rustls 0.23+)
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Bytes utilities
bytes = "1"

# Dev dependencies
proptest = "1.4"
tower = { version = "0.5", features = ["util"] }
serial_test = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
