[package]
name = "qbit-ai"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "AI agent orchestration for Qbit"

[dependencies]
# Foundation crates
qbit-core = { workspace = true }
qbit-settings = { workspace = true }
qbit-tools = { workspace = true }

# Infrastructure crates
qbit-indexer = { workspace = true }
qbit-pty = { workspace = true }
qbit-sidecar = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
parking_lot = { workspace = true }

# LLM integration via rig
rig-core = { workspace = true }
rig-anthropic-vertex = { path = "../rig-anthropic-vertex" }

# HTTP client
reqwest = { workspace = true }

# Graph-based workflow execution
graph-flow = { workspace = true }

# vtcode integration
vtcode-core = { workspace = true }

# Web search and content extraction
tavily = { workspace = true }
readability = { workspace = true }
url = { workspace = true }

[features]
default = []
tauri = ["qbit-pty/tauri"]
cli = ["qbit-pty/cli"]
local-tools = []

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
