[package]
name = "qbit-ai"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "AI agent orchestration for Qbit"

[dependencies]
# Foundation crates
qbit-core = { workspace = true }
qbit-settings = { workspace = true }
qbit-tools = { workspace = true }

# Infrastructure crates
vtcode-indexer = { workspace = true }
qbit-pty = { workspace = true }
qbit-sidecar = { workspace = true }

# Extracted AI subsystem crates
qbit-session = { workspace = true }
qbit-context = { workspace = true }
qbit-workflow = { workspace = true }
qbit-web = { workspace = true }
qbit-llm-providers = { workspace = true }
qbit-sub-agents = { workspace = true }
qbit-skills = { workspace = true }
qbit-shell-exec = { workspace = true }

# JSON repair for malformed LLM output
qbit-json-repair = { path = "../qbit-json-repair" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
tokenx-rs = { workspace = true }

# LLM integration via rig
rig-core = { workspace = true }
rig-anthropic-vertex = { path = "../rig-anthropic-vertex" }
# Custom OpenAI Responses provider for reasoning models
rig-openai-responses = { path = "../rig-openai-responses" }

# HTTP client (needed for llm_client.rs)
reqwest = { workspace = true }

[features]
default = []

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
