[package]
name = "qbit-api-logger"
version = "0.1.0"
edition = "2021"
description = "Raw LLM API request/response file logger for Qbit"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
