[package]
name = "qbit-ast-grep"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AST-based code search and replace for Qbit agent"

[dependencies]
# AST-grep core libraries
ast-grep-core = "0.40"
ast-grep-language = "0.40"

# Internal crates
qbit-core = { workspace = true }

# Core utilities
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
tracing = "0.1"
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
