[package]
name = "qbit-benchmarks"
version.workspace = true
edition.workspace = true
description = "Benchmark integrations for Qbit AI agent evaluation"

[dependencies]
# Internal crates
qbit-evals = { path = "../qbit-evals" }
qbit-core = { path = "../qbit-core" }

# External dependencies
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
