[package]
name = "qbit-cli-output"
version.workspace = true
description = "CLI output formatting and display for Qbit"
authors.workspace = true
edition.workspace = true

[dependencies]
# Core types (AiEvent, RuntimeEvent, RiskLevel)
qbit-core = { workspace = true }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio.workspace = true

# Error handling
anyhow.workspace = true

[dev-dependencies]
# Used only in tests (for RiskLevel in test cases)
