[package]
name = "qbit-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = { workspace = true }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
dirs = { workspace = true }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
serial_test = "3.0"
tempfile = "3.8"
