[package]
name = "qbit-file-ops"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "File operation tools for Qbit"

[dependencies]
qbit-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
similar = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
