[package]
name = "qbit-history"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
parking_lot.workspace = true
fs2 = "0.4"
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
