[package]
name = "qbit-hitl"
version.workspace = true
edition.workspace = true
description = "Human-in-the-loop approval system for Qbit AI"

[dependencies]
qbit-core = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
