[package]
name = "qbit-pty"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "PTY and terminal management for Qbit"

[dependencies]
# Foundation crates
qbit-core = { workspace = true }
qbit-settings = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }

# PTY support (feature-gated for tauri)
portable-pty = { version = "0.8", optional = true }
vte = { version = "0.13", optional = true }

# Concurrency
parking_lot = { version = "0.12", optional = true }

# Utilities
uuid = { version = "1", features = ["v4", "serde"], optional = true }
tracing = { version = "0.1" }
dirs = { workspace = true }
itoa = { version = "1.0" }

# Error handling
thiserror = { version = "2.0" }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []
tauri = ["dep:portable-pty", "dep:vte", "dep:parking_lot", "dep:uuid"]
cli = ["dep:portable-pty", "dep:vte", "dep:parking_lot", "dep:uuid"]
