[package]
name = "qbit-pty"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "PTY and terminal management for Qbit"

[dependencies]
# Foundation crates
qbit-core = { workspace = true }
qbit-settings = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }

# PTY support
portable-pty = { version = "0.8" }
vte = { version = "0.13" }

# Concurrency
parking_lot = { version = "0.12" }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
tracing = { version = "0.1" }
dirs = { workspace = true }
itoa = { version = "1.0" }

# Error handling
thiserror = { version = "2.0" }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []
