[package]
name = "qbit-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Runtime implementations for Qbit (Tauri and CLI)"

[dependencies]
# Foundation crate
qbit-core = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Utilities
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Tauri (for GUI runtime)
tauri = { workspace = true }

# CLI dependencies (for CLI runtime)
atty = { workspace = true }

[features]
default = []
