[package]
name = "qbit-settings"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Settings management for Qbit"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# TypeScript type generation
ts-rs = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Utilities
dirs = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
