[package]
name = "qbit-shell-exec"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Shell command execution for Qbit"

[dependencies]
qbit-core = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
